k8s/ingress-http.template.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jupyter-redirect
  namespace: $K8S_NAMESPACE
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
      sectionName: http
  hostnames:
    - "jupyter.${INGRESS_HOSTNAME}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
