k8s/ingress-https.template.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jupyter
  namespace: jupyter
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - "jupyter.${INGRESS_HOSTNAME}"
  rules:
    - backendRefs:
        - name: proxy-public
          port: 80
